--- a/css/helper/primefaces.css
+++ b/css/helper/primefaces.css
@@ -158,8 +158,22 @@ p-chart canvas {
 .p-carousel {
   width: 100%;
 }
+.p-carousel .p-carousel-container {
+  position: relative;
+}
+.p-carousel .p-carousel-container .p-carousel-prev,
+.p-carousel .p-carousel-container .p-carousel-next {
+  position: absolute;
+  box-shadow: var(--card-shadow);
+  z-index: 1;
+}
+.p-carousel .p-carousel-container .p-carousel-next {
+  right: 0;
+}
 .p-carousel .p-carousel-items-content {
   /* padding: 1rem; */
+  position: relative;
+  z-index: 0;
 }
 .p-carousel .p-carousel-items-content .p-carousel-items-container {
   gap: 0.5rem;
@@ -180,6 +194,13 @@ p-chart canvas {
   border: none;
   height: 0.25rem !important;
   border-radius: 0.125rem !important;
+}
+
+.p-paginator-left-content {
+  margin-right: none;
+}
+.p-paginator-right-content {
+  margin-left: none;
 }
 
 @media (max-width: 575.98px) {
@@ -363,6 +384,16 @@ p-chart canvas {
 .p-badge-success {
   background-color: var(--success) !important;
   color: var(--success-c) !important;
+}
+
+.p-toast-message-successful {
+  background-color: var(--successful) !important;
+  color: var(--successful-c) !important;
+}
+
+.p-badge-successful {
+  background-color: var(--successful) !important;
+  color: var(--successful-c) !important;
 }
 
 .p-toast-message-warn {
