--- a/styles/helper/primefaces.scss
+++ b/styles/helper/primefaces.scss
@@ -195,8 +195,25 @@ p-chart {
 .p-carousel {
   width: 100%;
 
+  .p-carousel-container {
+    position: relative;
+
+    .p-carousel-prev,
+    .p-carousel-next {
+      position: absolute;
+      box-shadow: var(--card-shadow);
+      z-index: 1;
+    }
+
+    .p-carousel-next {
+      right: 0
+    }
+  }
+
   .p-carousel-items-content {
     /* padding: 1rem; */
+    position: relative;
+    z-index: 0;
 
     .p-carousel-items-container {
       gap: 0.5rem;
@@ -226,6 +243,16 @@ p-chart {
       height: 0.25rem !important;
       border-radius: 0.125rem !important;
     }
+  }
+}
+
+.p-paginator {
+  &-left-content {
+    margin-right: none;
+  }
+
+  &-right-content {
+    margin-left: none;
   }
 }
 
