--- a/styles/sizes.scss
+++ b/styles/sizes.scss
@@ -6,24 +6,27 @@
 $grid-breakpoints: (sm: 576px, md: 768px, lg: 992px, xl: 1200px);
 $quarter-sizes: (0, 25, 50, 75, 100);
 $number-sizes: (1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
+$decimal-number-sizes: (d25: 0.25, d5: 0.5, d75: 0.75);
 $non-sizes: (unset, auto);
 
-@mixin layoutLooper($size, $dimension: '', $useDimension: false, $breakPoint: '') {
+/**
+* BoxSizing - Height & Width of a layout
+* @dimensionType -  This is the unit of dimension used, Its either the default dimensions (em, rem, px, %) or Viewpoints
+*/
+
+@mixin layoutLooper($size, $dimension: '', $useDimension: false, $breakPointKey: '', $sizeKey: $size) {
   $useDimension: $size !=0 and $useDimension;
   $_dimension: if($useDimension, $dimension, '');
   $_value: if(useDimension, #{$size}#{$_dimension}, $size);
 
-  /**
-* BoxSizing - Height & Width of a layout
-*/
   @each $limit in ('', 'min-', 'max-') {
     @each $dimensionType in ('', 'v') {
-      #{'.'}#{$limit}#{$dimensionType}#{'h-'}#{$breakPoint}#{$size} {
+      #{'.'}#{$limit}#{$dimensionType}#{'h-'}#{$breakPointKey}#{$sizeKey} {
         $_boxDimension: if($dimensionType=='v'and $useDimension, 'vh', $_dimension);
         #{$limit}height: #{$size}#{$_boxDimension} !important;
       }
 
-      #{'.'}#{$limit}#{$dimensionType}#{'w-'}#{$breakPoint}#{$size} {
+      #{'.'}#{$limit}#{$dimensionType}#{'w-'}#{$breakPointKey}#{$sizeKey} {
         $_boxDimension: if($dimensionType=='v'and $useDimension, 'vw', $_dimension);
         #{$limit}width: #{$size}#{$_boxDimension} !important;
       }
@@ -32,21 +35,21 @@ $non-sizes: (unset, auto);
 
   @each $direction-key,
   $direction in (t:(key:'Y', negation:'-'), l:(key:'X', negation:'-'), b:(key:'Y', negation:''), r:(key:'X', negation:'')) {
-    .float-#{$direction-key}-#{$breakPoint}#{$size} {
+    .float-#{$direction-key}-#{$breakPointKey}#{$sizeKey} {
       $_floatDimension: if($useDimension, '%', '');
       $_floatValue: if($useDimension, #{'translate'}#{map-get($direction,'key')}(#{map-get($direction,'negation')}#{$size}#{$_floatDimension}), $size);
       transform: $_floatValue;
     }
   }
 
-  .sq-#{$breakPoint}#{$size} {
+  .sq-#{$breakPointKey}#{$sizeKey} {
     height: $_value;
     width: $_value;
     min-height: $_value;
     min-width: $_value;
   }
 
-  .gap-#{$breakPoint}#{$size} {
+  .gap-#{$breakPointKey}#{$sizeKey} {
     gap: $_value;
   }
 }
@@ -66,6 +69,12 @@ $non-sizes: (unset, auto);
 @each $breakpoint-key,
 $breakpoint in $grid-breakpoints {
   @media (min-width:$breakpoint) {
+
+    @each $size-key,
+    $size in $decimal-number-sizes {
+      @include layoutLooper($size, 'rem', true, #{$breakpoint-key}#{'-'}, $size-key);
+    }
+
     @each $size in $number-sizes {
       @include layoutLooper($size, 'rem', true, #{$breakpoint-key}#{'-'});
     }
